# justcash-rs

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
guest/: Cargo.toml
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
prove/: Cargo.toml
prove/src/: lib.rs
verify/: Cargo.toml
verify/src/: lib.rs
