[package]
name = "justcash_prove"
version = "0.1.2"
edition = "2021"
description = "library to create a justcash proof of bill ownership"
license = "AGPL-3.0-only"

[dependencies]
risc0-zkvm = { version = "^3.0.3", features = ['disable-dev-mode'] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
justcash_core = { path = "../core", version = "0.1.1" }

